fix date to be more readable

--- a/src/components/Journal/Journal.css
+++ b/src/components/Journal/Journal.css
@@ -26,3 +26,7 @@ a{
 a :hover{
   color: rgb(111, 2, 2);
 }
+
+.date{
+  margin-left: 10%;
+}
